# rinse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RINSE.md
examples/rinse/: expected_output_shape.json  memory_bridge.py  rinse_core.py  sample_input.json
rinse/: __init__.py  bridge.py  core.py
schemas/: interpretation_record.schema.json  trace_event.schema.json
specs/: rinse.module.yaml
tests/: test_rinse_core.py
